* V1.9.4
  * fixed minor bug when searching repo by UID when repo doesn't exist
  * added CK internal var "debug". If set to "yes", print error when CK entries are broken or ignore them (now default)
    See https://github.com/ctuning/ck-tensorflow/commit/c4ddfcde1baacf6bebb23f345735b38006be08d1#commitcomment-25230616

* V1.9.3 
  * fixed issue #80 (adding zip repo if starts with ~)
  * fixed issue #81 (when renaming entry with data_name==data_alias, change it to the new alias)
  * added flag --name (duplicate of --show_name) to "ck ls"
  * fixed issue #82 (detecting name of repo from the zip filename)
  * fixed repo renaming (now updates .ckr.json and recache repo properly)

* V1.9.2
  * added "ck cd {CK entry}" to open a new shell in a given CK entry
  * added ck.compare_dicts examples
  * fixed some self tests
  * added safe recording of JSON (even if some keys are not serializable)
  * printing user-friendly name (from info.json "data_name") when removing entries.
    Useful when deleting env entries (ck rm env:*)
  * added more user-friendly configuration of internal CK variables via
    $ ck set kernel
    $ ck set kernel var.install_to_env=yes
  * added safe deletion of CK entries with Git files on Windows
  * automated adding CK .zip repos without questions

* V1.9.1
  * added ck.debug_out(i) to print dict to console
  * fixed strange warnings for Python 3.5+ on Windows and Linux (when installed via pip)
  * fixed repo renewing on latest Windows (when access error to Git files)
  * added ck show repo to show git status of all repos
  * started highly experimental support for stable repos or different branches/checkouts
    (particularly useful for Artifact Evaluation to check out only stable repos)

* V1.8.7 
  * fixed major bug with default license/author (to avoid crashing when adding new module)
  * fixed minor bug in API when starting CK web service and viewing entry (wcid option)