@@ -2,6 +2,8 @@
   * fixed minor bug when searching repo by UID when repo doesn't exist
   * added CK internal var "debug". If set to "yes", print error when CK entries are broken or ignore them (now default)
     See https://github.com/ctuning/ck-tensorflow/commit/c4ddfcde1baacf6bebb23f345735b38006be08d1#commitcomment-25230616
+  * fixed minor bug in detection of minimal CK kernel version
+    (important since current python3-ck in official Ubunutu 17.04 is quite outdated: v1.7.2)
 
 * V1.9.3 
   * fixed issue #80 (adding zip repo if starts with ~)
